完成ppo算法训练

--- a/reward_train.ipynb
+++ b/reward_train.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "669dcccc",
    "metadata": {},
    "outputs": [],
@@ -36,18 +36,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "517f4e20",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'conversations': [{'from': 'human', 'value': 'A、B两地分别在河流的上游和下游，相距18千米，甲、乙在静水中划船的速度分别为每小时12千米和9千米。同时岸上有一条公路连接A、B两地，长度为27千米，甲从A地出发沿公路开车到B地后立刻划船返回A地，用时2小时45分钟，乙从A地出发划船到B地后立即沿公路开车返回A地，用时2小时30分钟。则乙开车的速度为每小时多少千米？（两人换乘的时间均忽略不计）'}], 'chosen': {'from': 'gpt', 'value': '。\\n\\n设乙开车的速度为v千米/小时。\\n\\n甲从A地出发，先开车到B地，再划船返回A地，总用时2小时45分钟，即2.75小时。由于A、B两地之间的公路长度为27千米，河流长度为18千米，甲划船的速度为12千米/小时。\\n\\n设甲开车的速度为\\\\(v_1\\\\)千米/小时（为求解乙的速度，\\\\(v_1\\\\)为中间变量，但我们可以利用题设信息直接求出其值，不过此处先假设），则有：\\n\\n\\\\[v_1 \\\\times \\\\frac{27}{v_1} + 12 \\\\times \\\\frac{18}{12} = 2.75\\\\]\\n\\n这里的\\\\(\\\\frac{27}{v_1}\\\\)表示甲开车从A到B的时间，\\\\(\\\\frac{18}{12}\\\\)表示甲划船从B到A的时间，等号左边表示总时间。\\n\\n由于\\\\(\\\\frac{18}{12} = 1.5\\\\)小时，将之代入方程中解得甲开车的时间为\\\\(2.75 - 1.5 = 1.25\\\\)小时，进而解得\\\\(v_1 = \\\\frac{27}{1.25} = 21.6\\\\)千米/小时。这是甲开车的速度。\\n\\n乙从A地出发划船到B地，再开车返回A地，总用时2小时30分钟，即2.5小时。乙划船的速度为9千米/小时，乙划船从A到B的时间为\\\\(\\\\frac{18}{9} = 2\\\\)小时。\\n\\n设乙开车的速度为v千米/小时，则有：\\n\\n\\\\[2 + \\\\frac{27}{v} = 2.5\\\\]\\n\\n即\\n\\n\\\\[\\\\frac{27}{v} = 0.5\\\\]\\n\\n解此方程得乙开车的速度v为：\\n\\n\\\\[v = \\\\frac{27}{0.5} = 54\\\\]\\n\\n因此，乙开车的速度为每小时54千米。'}, 'rejected': {'from': 'gpt', 'value': '【分析】先根据速度和时间求出甲划船的速度和汽车的速度，根据甲从A地出发沿公路开车到B地后立刻划船返回A地，用时2小时45分钟，可求出甲划船的速度和汽车的速度，根据甲从A地出发沿公路开车到B地后立刻划船返回A地，用时2小时45分钟，乙从A地出发划船到B地后立即沿公路开车返回A地，用时2小时30分钟，可知甲到达B地后顺流而下，乙到达B地后逆流而上，甲与乙所走的总路程为36千米，根据甲从A地出发沿公路开车到B地后立刻划船返回A地，用时2小时45分钟，乙从A地出发划船到B地后立即沿公路开车返回A地，用时2小时30分钟，可分别求出甲和乙的行驶速度，即可求出乙开车的速度．据此解答．\\n【解答】解：设甲划船的速度是每小时x千米，汽车的速度是每小时y千米，根据题意得：\\n2.7×2y=18×12\\ny=9\\n2.7×2x=18×9\\nx=9\\n所以乙开车的速度为：\\n27×2y÷（27×2x+27×2x）\\n=27×18÷（27×18+27×18）\\n=18÷18\\n=1（小时）\\n答：乙开车的速度为每小时1千米．\\n【点评】本题的关键是要先用甲和乙的行驶速度表示出他们行驶的全程和全程中的总用时，然后找出等量关系，即甲从A地出发沿公路开车到B地后立刻划船返回A地，用时2小时45分钟，乙从A地出发划船到B地后立即沿公路开车返回A地，用时2小时30分钟，可分别求出甲和乙的行驶速度．本题的关键是找出等量关系．甲从A地出发沿公路开车到B地后立刻划船返回A地，用时2小时45分钟，乙从A地出发划船到B地后立即沿公路开车返回A地，用时2小时30分钟．\\n求得乙开车的速度．本题的关键是找出等量关系．进而求出甲和乙的行驶速度'}, 'domain': 'logic'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 原始数据集\n",
     "dataset = load_dataset(\"parquet\", data_files=dataset_path)\n",
@@ -56,18 +48,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "eadeb4e1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'conversations': [{'from': 'human', 'value': 'A、B两地分别在河流的上游和下游，相距18千米，甲、乙在静水中划船的速度分别为每小时12千米和9千米。同时岸上有一条公路连接A、B两地，长度为27千米，甲从A地出发沿公路开车到B地后立刻划船返回A地，用时2小时45分钟，乙从A地出发划船到B地后立即沿公路开车返回A地，用时2小时30分钟。则乙开车的速度为每小时多少千米？（两人换乘的时间均忽略不计）'}], 'chosen': [{'content': 'A、B两地分别在河流的上游和下游，相距18千米，甲、乙在静水中划船的速度分别为每小时12千米和9千米。同时岸上有一条公路连接A、B两地，长度为27千米，甲从A地出发沿公路开车到B地后立刻划船返回A地，用时2小时45分钟，乙从A地出发划船到B地后立即沿公路开车返回A地，用时2小时30分钟。则乙开车的速度为每小时多少千米？（两人换乘的时间均忽略不计）', 'role': 'user'}, {'content': '。\\n\\n设乙开车的速度为v千米/小时。\\n\\n甲从A地出发，先开车到B地，再划船返回A地，总用时2小时45分钟，即2.75小时。由于A、B两地之间的公路长度为27千米，河流长度为18千米，甲划船的速度为12千米/小时。\\n\\n设甲开车的速度为\\\\(v_1\\\\)千米/小时（为求解乙的速度，\\\\(v_1\\\\)为中间变量，但我们可以利用题设信息直接求出其值，不过此处先假设），则有：\\n\\n\\\\[v_1 \\\\times \\\\frac{27}{v_1} + 12 \\\\times \\\\frac{18}{12} = 2.75\\\\]\\n\\n这里的\\\\(\\\\frac{27}{v_1}\\\\)表示甲开车从A到B的时间，\\\\(\\\\frac{18}{12}\\\\)表示甲划船从B到A的时间，等号左边表示总时间。\\n\\n由于\\\\(\\\\frac{18}{12} = 1.5\\\\)小时，将之代入方程中解得甲开车的时间为\\\\(2.75 - 1.5 = 1.25\\\\)小时，进而解得\\\\(v_1 = \\\\frac{27}{1.25} = 21.6\\\\)千米/小时。这是甲开车的速度。\\n\\n乙从A地出发划船到B地，再开车返回A地，总用时2小时30分钟，即2.5小时。乙划船的速度为9千米/小时，乙划船从A到B的时间为\\\\(\\\\frac{18}{9} = 2\\\\)小时。\\n\\n设乙开车的速度为v千米/小时，则有：\\n\\n\\\\[2 + \\\\frac{27}{v} = 2.5\\\\]\\n\\n即\\n\\n\\\\[\\\\frac{27}{v} = 0.5\\\\]\\n\\n解此方程得乙开车的速度v为：\\n\\n\\\\[v = \\\\frac{27}{0.5} = 54\\\\]\\n\\n因此，乙开车的速度为每小时54千米。', 'role': 'assistant'}], 'rejected': [{'content': 'A、B两地分别在河流的上游和下游，相距18千米，甲、乙在静水中划船的速度分别为每小时12千米和9千米。同时岸上有一条公路连接A、B两地，长度为27千米，甲从A地出发沿公路开车到B地后立刻划船返回A地，用时2小时45分钟，乙从A地出发划船到B地后立即沿公路开车返回A地，用时2小时30分钟。则乙开车的速度为每小时多少千米？（两人换乘的时间均忽略不计）', 'role': 'user'}, {'content': '【分析】先根据速度和时间求出甲划船的速度和汽车的速度，根据甲从A地出发沿公路开车到B地后立刻划船返回A地，用时2小时45分钟，可求出甲划船的速度和汽车的速度，根据甲从A地出发沿公路开车到B地后立刻划船返回A地，用时2小时45分钟，乙从A地出发划船到B地后立即沿公路开车返回A地，用时2小时30分钟，可知甲到达B地后顺流而下，乙到达B地后逆流而上，甲与乙所走的总路程为36千米，根据甲从A地出发沿公路开车到B地后立刻划船返回A地，用时2小时45分钟，乙从A地出发划船到B地后立即沿公路开车返回A地，用时2小时30分钟，可分别求出甲和乙的行驶速度，即可求出乙开车的速度．据此解答．\\n【解答】解：设甲划船的速度是每小时x千米，汽车的速度是每小时y千米，根据题意得：\\n2.7×2y=18×12\\ny=9\\n2.7×2x=18×9\\nx=9\\n所以乙开车的速度为：\\n27×2y÷（27×2x+27×2x）\\n=27×18÷（27×18+27×18）\\n=18÷18\\n=1（小时）\\n答：乙开车的速度为每小时1千米．\\n【点评】本题的关键是要先用甲和乙的行驶速度表示出他们行驶的全程和全程中的总用时，然后找出等量关系，即甲从A地出发沿公路开车到B地后立刻划船返回A地，用时2小时45分钟，乙从A地出发划船到B地后立即沿公路开车返回A地，用时2小时30分钟，可分别求出甲和乙的行驶速度．本题的关键是找出等量关系．甲从A地出发沿公路开车到B地后立刻划船返回A地，用时2小时45分钟，乙从A地出发划船到B地后立即沿公路开车返回A地，用时2小时30分钟．\\n求得乙开车的速度．本题的关键是找出等量关系．进而求出甲和乙的行驶速度', 'role': 'assistant'}], 'domain': 'logic'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 转换数据集\n",
     "dataset = dataset.map(make_conversation)\n",
@@ -82,6 +66,7 @@
    "outputs": [],
    "source": [
     "# 划分数据集\n",
+    "dataset = dataset[\"train\"].train_test_split(test_size=0.9, seed=42) # 只取50%用于训练\n",
     "split_dataset = dataset[\"train\"].train_test_split(test_size=0.2, seed=42)\n",
     "dataset = DatasetDict({\n",
     "    \"train\": split_dataset[\"train\"],\n",
@@ -101,22 +86,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "9d1f6493",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of Qwen2ForSequenceClassification were not initialized from the model checkpoint at ./Qwen2.5-0.5B and are newly initialized: ['score.weight']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import torch\n",
     "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
     "from transformers import TrainingArguments\n",
+    "from trl import RewardConfig\n",
+    "from peft import LoraConfig, TaskType\n",
     "\n",
     "# 加载模型\n",
     "model_path = \"./Qwen2.5-0.5B\"\n",
@@ -127,16 +106,36 @@
     "    model.config.pad_token_id = model.config.eos_token_id\n",
     "\n",
     "# 加载配置\n",
-    "training_args = TrainingArguments(\n",
-    "    output_dir = \"./Qwen2.5-0.5B-Reward\",\n",
+    "training_args = RewardConfig(\n",
+    "    output_dir=\"./Qwen2.5-0.5B-Reward\",\n",
     "    num_train_epochs=1,\n",
-    "    learning_rate=1.0e-5,\n",
-    "    per_device_train_batch_size= 8,\n",
+    "    per_device_train_batch_size=32,\n",
+    "    gradient_accumulation_steps=2,\n",
+    "    learning_rate=1.0e-3, # LoRA训练可以放大lr\n",
+    "    warmup_ratio=0.1,\n",
+    "    logging_first_step=True,\n",
+    "    logging_steps=5,\n",
+    "    logging_strategy=\"steps\",\n",
+    "    save_steps=100,\n",
     "    eval_strategy=\"steps\",\n",
-    "    eval_steps=50,\n",
+    "    eval_steps=1000,\n",
     "    gradient_checkpointing=True,\n",
-    "    logging_steps=1,\n",
-    "    report_to=None,\n",
+    "    report_to=\"tensorboard\",\n",
+    "    logging_dir=\"./reward_logs\",\n",
+    "    bf16=torch.cuda.is_available()\n",
+    ")\n",
+    "\n",
+    "# Lora配置\n",
+    "peft_config = LoraConfig(\n",
+    "    r=64,\n",
+    "    lora_alpha=16,\n",
+    "    lora_dropout=0.05,\n",
+    "    target_modules=[\n",
+    "        \"q_proj\", \"k_proj\", \"v_proj\", \"o_proj\",\n",
+    "        \"gate_proj\", \"up_proj\", \"down_proj\",\n",
+    "    ],\n",
+    "    task_type=TaskType.SEQ_CLS,\n",
+    "    modules_to_save=[\"score\"],  # 很关键：保证 reward head 也能被保存/训练\n",
     ")"
    ]
   },
@@ -150,16 +149,21 @@
     "import torch\n",
     "from accelerate import logging\n",
     "from trl import RewardTrainer\n",
+    "import peft\n",
     "\n",
     "trainer = RewardTrainer(\n",
     "    model=model,\n",
-    "    tokenizer=tokenizer,\n",
     "    args=training_args,\n",
     "    train_dataset=dataset[\"train\"],\n",
     "    eval_dataset=dataset[\"test\"],\n",
+    "    processing_class=tokenizer,\n",
+    "    peft_config=peft_config\n",
     ")\n",
+    "print(trainer.args.device)\n",
     "\n",
-    "trainer.train()"
+    "trainer.train()\n",
+    "trainer.save_model(\"./Qwen2.5-0.5B-Reward\")\n",
+    "tokenizer.save_pretrained(\"./Qwen2.5-0.5B-Reward\")"
    ]
   }
  ],
